src/objects/ptContact__c.object
<CustomObject>
    <description>Custom objects to Contacts from Vendors and Consumers</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active profile</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True/Checked for Opting marketing email</description>
        <inlineHelpText>Checked if Contact wanted to opt out marketing emails</inlineHelpText>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Login password</description>
        <label>Password</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Login username</description>
        <label>Username</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>ptContacts</relationshipLabel>
        <relationshipName>ptContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ptContact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ptContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>